tests/reject/bad_print.ml
void main () {
	print print "foo";
}
